@@ -30,7 +30,9 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import com.publicissapient.kpidashboard.apis.bitbucket.service.BitBucketServiceR;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.collections4.MapUtils;
 import org.slf4j.MDC;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.ParameterizedTypeReference;
@@ -76,6 +78,7 @@ public class KpiIntegrationServiceImpl {
 	private static final String KPI_SOURCE_SONAR = "Sonar";
 	private static final String KPI_SOURCE_ZEPHYR = "Zypher";
 	private static final String KPI_SOURCE_JENKINS = "Jenkins";
+	private static final String KPI_SOURCE_DEVELOPER = "BitBucket";
 	private static final String SPRINT_CLOSED = "CLOSED";
 	private static final String RNR_API_HEADER = "X-Custom-Authentication";
 
@@ -101,6 +104,9 @@ public class KpiIntegrationServiceImpl {
 	NonTrendServiceFactory serviceFactory;
 
 	@Autowired
+	private BitBucketServiceR bitBucketServiceR;
+
+	@Autowired
 	private CustomApiConfig customApiConfig;
 
 	@Autowired
@@ -121,23 +127,26 @@ public class KpiIntegrationServiceImpl {
 		setKpiRequest(kpiRequest);
 		sourceWiseKpiList.forEach((source, kpiList) -> {
 			try {
-				kpiRequest.setKpiList(
-						sourceWiseKpiList.get(source).stream().map(this::mapKpiMasterToKpiElement).collect(Collectors.toList()));
+				kpiRequest.setKpiList(sourceWiseKpiList.get(source).stream().map(this::mapKpiMasterToKpiElement)
+						.toList());
 				switch (source) {
-					case KPI_SOURCE_JIRA :
-						kpiElements.addAll(getJiraKpiMaturity(kpiRequest));
-						break;
-					case KPI_SOURCE_SONAR :
-						kpiElements.addAll(getSonarKpiMaturity(kpiRequest));
-						break;
-					case KPI_SOURCE_ZEPHYR :
-						kpiElements.addAll(getZephyrKpiMaturity(kpiRequest));
-						break;
-					case KPI_SOURCE_JENKINS :
-						kpiElements.addAll(getJenkinsKpiMaturity(kpiRequest));
-						break;
-					default :
-						log.error("Invalid Kpi");
+				case KPI_SOURCE_JIRA:
+					kpiElements.addAll(getJiraKpiMaturity(kpiRequest));
+					break;
+				case KPI_SOURCE_SONAR:
+					kpiElements.addAll(getSonarKpiMaturity(kpiRequest));
+					break;
+				case KPI_SOURCE_ZEPHYR:
+					kpiElements.addAll(getZephyrKpiMaturity(kpiRequest));
+					break;
+				case KPI_SOURCE_JENKINS:
+					kpiElements.addAll(getJenkinsKpiMaturity(kpiRequest));
+					break;
+				case KPI_SOURCE_DEVELOPER:
+					kpiElements.addAll(getDeveloperKpiMaturity(kpiRequest));
+					break;
+				default:
+					log.error("Invalid Kpi");
 				}
 			} catch (Exception ex) {
 				log.error("Error while fetching kpi maturity data", ex);
@@ -187,13 +196,15 @@ public class KpiIntegrationServiceImpl {
 				hierarchyIdList = new String[]{
 						kpiRequest.getHierarchyName().concat(Constant.UNDERSCORE).concat(hierarchyLevel.getHierarchyLevelId())};
 			}
-			Map<String, List<String>> selectedMap = new HashMap<>();
-			selectedMap.put(hierarchyLevel.getHierarchyLevelId(),
-					Arrays.stream(hierarchyIdList).collect(Collectors.toList()));
+			if(MapUtils.isEmpty(kpiRequest.getSelectedMap())) {
+				Map<String, List<String>> selectedMap = new HashMap<>();
+				selectedMap.put(hierarchyLevel.getHierarchyLevelId(), Arrays.stream(hierarchyIdList).toList());
+				kpiRequest.setSelectedMap(selectedMap);
+			}
+
 			kpiRequest.setIds(hierarchyIdList);
 			kpiRequest.setLabel(hierarchyLevel.getHierarchyLevelId());
-			kpiRequest.setSelectedMap(selectedMap);
-			kpiRequest.setSprintIncluded(Arrays.asList(SPRINT_CLOSED));
+			kpiRequest.setSprintIncluded(List.of(SPRINT_CLOSED));
 		}
 	}
 
@@ -282,6 +293,27 @@ public class KpiIntegrationServiceImpl {
 		MDC.put("JenkinsRequestStartTime", String.valueOf(jenkinsRequestStartTime));
 		List<KpiElement> responseList = jenkinsServiceR.processWithExposedApiToken(kpiRequest);
 		MDC.put("TotalJenkinsRequestTime", String.valueOf(System.currentTimeMillis() - jenkinsRequestStartTime));
+		MDC.clear();
+		return responseList;
+	}
+
+	/**
+	 * get kpi data for source jenkins
+	 *
+	 * @param kpiRequest
+	 * 		kpiRequest to fetch kpi data
+	 * @return list of sonar KpiElement
+	 * @throws EntityNotFoundException
+	 * 		entity not found exception for jenkins service method
+	 */
+	private List<KpiElement> getDeveloperKpiMaturity(KpiRequest kpiRequest) throws EntityNotFoundException {
+		MDC.put("DeveloperKpiRequest", kpiRequest.getRequestTrackerId());
+		String sanitizedRequestTrackerId = kpiRequest.getRequestTrackerId().replaceAll("[^a-zA-Z0-9-_]", "_");
+		log.info("Received Developer KPI request {}", sanitizedRequestTrackerId);
+		long developerRequestStartTime = System.currentTimeMillis();
+		MDC.put("JenkinsRequestStartTime", String.valueOf(developerRequestStartTime));
+		List<KpiElement> responseList = bitBucketServiceR.processWithExposedApiToken(kpiRequest);
+		MDC.put("TotalJenkinsRequestTime", String.valueOf(System.currentTimeMillis() - developerRequestStartTime));
 		MDC.clear();
 		return responseList;
 	}
